# companion-virus

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  ProjetVirus_Chamouard_Cvjetic_Vendredi_GR2a.html  ProjetVirus_Chamouard_Cvjetic_Vendredi_Gr2a.md  compose.yml  converter.c  entrypoint.sh  launch.sh  setup_test_env.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
include/common/: gui_utils.h
include/core/: base_converter.h  file_hasher.h  img_inverter.h  mediaplayer_core.h  temp_converter.h
include/ui/: base_converter_ui.h  caesar_encrypt_ui.h  file_hasher_ui.h  gui_utils.h  img_inverter_ui.h  mediaplayer_ui.h  num_generator_ui.h  temp_converter_ui.h
include/utils/: base_converter.h  caesar_encrypt.h  file_hasher.h  num_generator.h
include/virus/: mediaplayer.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  gui_utils.c
src/core/: CMakeLists.txt  base_converter.c  caesar_encrypt.c  file_hasher.c  img_inverter.c  mediaplayer_core.c  num_generator.c  temp_converter.c
src/ui/: CMakeLists.txt  base_converter.c  caesar_encrypt.c  file_hasher.c  gui_utils.c  img_inverter.c  mediaplayer.c  num_generator.c  temp_converter.c
src/utils/: BaseConverter.c  CMakeLists.txt  CaesarEncrypt.c  ImgInverter.c  MediaPlayer.c  NumGenerator.c  TempConverter.c  base_converter.c  converter.c  cypher.c  file_hasher.c  gui_utils.c  gui_utils.h  img_invert.c  num_generator.c  temp_converter.c
src/utils/base_converter/: core.c  ui.c
src/utils/caesar_encrypt/: core.c  ui.c
src/utils/file_hasher/: core.c  ui.c
src/utils/img_inverter/: core.c  ui.c
src/utils/num_generator/: core.c  ui.c
src/utils/temp_converter/: core.c  ui.c
src/virus/: CMakeLists.txt  core.c  ui.c
test/: CMakeLists.txt
test/utils/: CMakeLists.txt  base_converter_test.c  caesar_encrypt_test.c  file_hasher_test.c  img_inverter_test.c  num_generator_test.c  temp_converter_test.c
test/virus/: CMakeLists.txt  mediaplayer_test.c
tests/: cypher_toCypher.txt  toCypher.txt
