add_executable(base_converter_test base_converter_test.c)
target_include_directories(base_converter_test PRIVATE ${PROJECT_SOURCE_DIR}/include ${GLIB_INCLUDE_DIRS})
target_sources(base_converter_test PRIVATE ${PROJECT_SOURCE_DIR}/src/utils/base_converter/core.c)
target_link_libraries(base_converter_test PRIVATE ${GLIB_LIBRARIES} m)
target_compile_options(base_converter_test PRIVATE ${GLIB_CFLAGS_OTHER})

add_executable(caesar_encrypt_test caesar_encrypt_test.c)
target_include_directories(caesar_encrypt_test PRIVATE ${PROJECT_SOURCE_DIR}/include ${GLIB_INCLUDE_DIRS})
target_sources(caesar_encrypt_test PRIVATE ${PROJECT_SOURCE_DIR}/src/utils/caesar_encrypt/core.c)
target_link_libraries(caesar_encrypt_test PRIVATE ${GLIB_LIBRARIES} ${OPENSSL_LIBRARIES} m)
target_compile_options(caesar_encrypt_test PRIVATE ${GLIB_CFLAGS_OTHER})

add_executable(file_hasher_test file_hasher_test.c)
target_include_directories(file_hasher_test PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_sources(file_hasher_test PRIVATE ${PROJECT_SOURCE_DIR}/src/utils/file_hasher/core.c)
target_link_libraries(file_hasher_test PRIVATE ${OPENSSL_LIBRARIES} m)

add_executable(img_inverter_test img_inverter_test.c)
target_include_directories(img_inverter_test PRIVATE ${PROJECT_SOURCE_DIR}/include ${GLIB_INCLUDE_DIRS} ${GD_INCLUDE_DIRS})
target_sources(img_inverter_test PRIVATE ${PROJECT_SOURCE_DIR}/src/utils/img_inverter/core.c)
target_link_libraries(img_inverter_test PRIVATE ${GLIB_LIBRARIES} ${GD_LIBRARIES} m)
target_compile_options(img_inverter_test PRIVATE ${GLIB_CFLAGS_OTHER})

add_executable(num_generator_test num_generator_test.c)
target_include_directories(num_generator_test PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_sources(num_generator_test PRIVATE ${PROJECT_SOURCE_DIR}/src/utils/num_generator/core.c)
target_link_libraries(num_generator_test PRIVATE m)

add_executable(temp_converter_test temp_converter_test.c)
target_include_directories(temp_converter_test PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_sources(temp_converter_test PRIVATE ${PROJECT_SOURCE_DIR}/src/utils/temp_converter/core.c)
target_link_libraries(temp_converter_test PRIVATE m)

add_test(NAME base_converter COMMAND base_converter_test)
add_test(NAME caesar_encrypt COMMAND caesar_encrypt_test)
add_test(NAME file_hasher COMMAND file_hasher_test)
add_test(NAME img_inverter COMMAND img_inverter_test)
add_test(NAME num_generator COMMAND num_generator_test)
add_test(NAME temp_converter COMMAND temp_converter_test)


add_test(NAME base_converter COMMAND base_converter_test)
add_test(NAME caesar_encrypt COMMAND caesar_encrypt_test)
add_test(NAME file_hasher COMMAND file_hasher_test)
add_test(NAME img_inverter COMMAND img_inverter_test)
add_test(NAME num_generator COMMAND num_generator_test)
add_test(NAME temp_converter COMMAND temp_converter_test)
